商品カードコンポーネント作成

--- a/client/assets/scss/foundation/_variable.scss
+++ b/client/assets/scss/foundation/_variable.scss
@@ -7,6 +7,8 @@ $color-sub:#2f495e;
 $color-background: #e6e6e6;
 $color-border: #d1d1d1;
 $color-text: #526488;
+$color-white: #ffffff;
+$color-black: #000000;
 
 // ===========================
 // フォントサイズ
@@ -20,6 +22,11 @@ $font-size-header: 30px;
 // 余白
 // ===========================
 
-$spacer-s: 10px;
-$spacer: 15px;
-$spacer-l:20px;
+$spacer-s: 5px;
+$spacer-m: 10px;
+$spacer-l: 15px;
+$spacer-ll: 20px;
+$spacer-xl: 25px;
+
+$radius-button: 5px;
+$radius-card: 10px;
