--- a/client/assets/scss/object/project/_header.scss
+++ b/client/assets/scss/object/project/_header.scss
@@ -7,7 +7,7 @@
     font-size: $font-size-header;
     color: $color-sub;
     font-weight: bold;
-    padding: $spacer;
+    padding: $spacer-m;
     // フォントを変えたい
     }
   }
