--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -26,6 +26,7 @@
 // project
 // ---------------------------
 @import "./object/project/header";
+@import "./object/project/product-card";
 
 // utility
 // ---------------------------
