商品選択ページ

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -27,6 +27,7 @@
 // ---------------------------
 @import "./object/project/header";
 @import "./object/project/product-card";
+@import "./object/project/product-select";
 
 // utility
 // ---------------------------
