--- a/client/assets/scss/foundation/_variable.scss
+++ b/client/assets/scss/foundation/_variable.scss
@@ -9,6 +9,7 @@ $color-border: #d1d1d1;
 $color-text: #526488;
 $color-white: #ffffff;
 $color-black: #000000;
+$color-tmp: #faa;
 
 // ===========================
 // フォントサイズ
