--- a/client/assets/scss/object/project/_product-card.scss
+++ b/client/assets/scss/object/project/_product-card.scss
@@ -1,5 +1,5 @@
 .p-product-card {
-  margin: $spacer-m;
+  // margin: $spacer-m;
   background: $color-white;
   border-radius: $radius-card;
   border: 1px solid $color-border;
