名前登録 スタイル設定

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -28,6 +28,7 @@
 @import "./object/project/header";
 @import "./object/project/product-card";
 @import "./object/project/product-select";
+@import "./object/project/name-form";
 
 // utility
 // ---------------------------
