名前登録ページ スタイル設定

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -29,6 +29,7 @@
 @import "./object/project/product-card";
 @import "./object/project/product-select";
 @import "./object/project/name-form";
+@import "./object/project/register"
 
 // utility
 // ---------------------------
