--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -28,6 +28,10 @@
 @import "./object/project/header";
 @import "./object/project/product-card";
 @import "./object/project/product-select";
+@import "./object/project/name-form";
+@import "./object/project/register";
+@import "./object/project/quantity-button";
+@import "./object/project/total-section"
 
 // utility
 // ---------------------------
