--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -30,7 +30,8 @@
 @import "./object/project/product-select";
 @import "./object/project/name-form";
 @import "./object/project/register";
-@import "./object/project/_quantity-button";
+@import "./object/project/quantity-button";
+@import "./object/project/total-section"
 
 // utility
 // ---------------------------
