マイページ画面作成 スタイル設定

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -31,7 +31,8 @@
 @import "./object/project/name-form";
 @import "./object/project/register";
 @import "./object/project/quantity-button";
-@import "./object/project/total-section"
+@import "./object/project/total-section";
+@import "./object/project/mypage";
 
 // utility
 // ---------------------------
