一覧表示コンポーネント スタイル設定

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -33,6 +33,7 @@
 @import "./object/project/quantity-button";
 @import "./object/project/total-section";
 @import "./object/project/mypage";
+@import "./object/project/order-list";
 
 // utility
 // ---------------------------
