頼まれた商品一覧  画面表示まで

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -34,6 +34,7 @@
 @import "./object/project/total-section";
 @import "./object/project/mypage";
 @import "./object/project/order-list";
+@import "./object/project/order";
 
 // utility
 // ---------------------------
