--- a/client/assets/scss/object/project/_header.scss
+++ b/client/assets/scss/object/project/_header.scss
@@ -2,6 +2,7 @@
   height: 50px;
   width: 100%;
   background: $color-main;
+  position: relative;
   &__title {
     &-link {
     font-size: $font-size-header;
@@ -9,6 +10,51 @@
     font-weight: bold;
     padding: $spacer-m;
     // フォントを変えたい
+    }
+  }
+  &__menu-button{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: $spacer-l;
+    border: 3px solid $color-white;
+    border-radius: $radius-button;
+    width: 36px;
+    height: 36px;
+    &--top {
+      display: inline-block;
+      background: $color-white;
+      position: absolute;
+      top: 48%;
+      left: 4px;
+      transform: translateY(-9px);
+      width: 22px;
+      height: 4px;
+      border: 1px solid $color-white;
+      border-radius: 2px;
+    }
+    &--middle {
+      display: inline-block;
+      background: $color-white;
+      position: absolute;
+      top: 48%;
+      left: 4px;
+      width: 22px;
+      height: 4px;
+      border: 1px solid $color-white;
+      border-radius: 2px;
+    }
+    &--bottom {
+      display: inline-block;
+      background: $color-white;
+      position: absolute;
+      top: 48%;
+      left: 4px;
+      transform: translateY(9px);
+      width: 22px;
+      height: 4px;
+      border: 1px solid $color-white;
+      border-radius: 2px;
     }
   }
 }
