メニュー画面 スタイル設定

--- a/client/assets/scss/foundation/_variable.scss
+++ b/client/assets/scss/foundation/_variable.scss
@@ -16,7 +16,8 @@ $color-tmp: #faa;
 // ===========================
 
 $font-size-default: 16px;
-$font-size-l:18px;
+$font-size-l: 18px;
+$font-size-xl: 24px;
 $font-size-header: 30px;
 
 // ===========================
