--- a/client/assets/scss/object/project/_header.scss
+++ b/client/assets/scss/object/project/_header.scss
@@ -2,7 +2,10 @@
   height: 50px;
   width: 100%;
   background: $color-main;
-  position: relative;
+  z-index: 2;
+  position: fixed;
+  top: 0;
+  left: 0;
   &__title {
     &-link {
     font-size: $font-size-header;
