--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -35,6 +35,7 @@
 @import "./object/project/mypage";
 @import "./object/project/order-list";
 @import "./object/project/order";
+@import "./object/project/_tanonder-menu";
 
 // utility
 // ---------------------------
